08/04/2020 - Add radius in element
	   - Bug fixes concerning underIntegration jacobian

24/03/2020 - GPL 3.0 License

12/03/2020 - Correction of a bug in Tensor2 class
           - Documentation of Tensor classes

10/03/2020 - Cleaning of the source code
             Removes the obsolete CrackFunction class

06/03/2020 - Documentation of the dnlKernel directory

13/02/2020 - Add the Under integration points to elements
           - Option to compute Power Iteration Method with under integration of stiffness matrix

12/02/2020 - Implementation of the Power Iteration Method to compute timeSteps

11/02/2020 - Cleaning of Objects and tracking of bugs

07/02/2020 - Modification of including and building tree
           - Transfer of Nodes, Elements and Material to Model class

17/01/2020 - Add more control on produced SVG images

16/01/2020 - Add 3D SVG export
           - Correction of the colormap to enhance the higher value

14/01/2020 - Add SVG export with interpolated colors

13/01/2020 - Add ColorMap class to compute color maps
           - Add export to Averaged SVG color plot

10/01/2020 - New classes to export 2D Vector graphic mesh to SVG file (first version)

09/01/2020 - Update of Taylor-Axi, Taylor-3D and BarNecking-Axi samples (add to documentation) 

07/01/2020 - Parallelization procedure with One core by default

19/12/2019 - Modification of Time History Saves to include initial state
           - Replaced list of Domain by Model class (update of the samples)
           - Replaced the result files write procedure to remove spurious oscillations
           
12/12/2019 - First commit of sources, documentation and samples files