@@ -85,7 +85,7 @@ model.attachConstantBC(topBC, topNS)
 
 # Declaration of a ramp function to apply the load
 ramp = dnl.RampFunction("constantFunction")
-ramp.set(dnl.RampFunction.Constant, 0, stopTime)
+ramp.setFunction(dnl.RampFunction.Constant, 0, stopTime)
 
 # Declaration of a boundary condition for top part
 topSpeed = dnl.BoundarySpeed()
