@@ -11820,9 +11820,9 @@ svg.write(dnl.String("mesh.svg"))
 
 model.solve()
 
-svg.write(dnl.String("temperatureCP.svg"),dnl.Field.temperature)
-svg.write(dnl.String("vonMisesCP.svg"),dnl.Field.vonMises)
-svg.write(dnl.String("plasticStrainCP.svg"),dnl.Field.plasticStrain)
+svg.write(dnl.String("temperatureCP.svg"), dnl.Field.temperature)
+svg.write(dnl.String("vonMisesCP.svg"), dnl.Field.vonMises)
+svg.write(dnl.String("plasticStrainCP.svg"), dnl.Field.plasticStrain)
 
 # Plot the results as curves
 import dnlCurves as cu
